modules/security/security_groups.tf
resource "aws_security_group" "bastion" {
  name = "test-project-bastion-security-group"
  vpc_id = var.vpc_id
  description = "web and ssh from bastion"
  ingress {
    from_port = 22
    protocol  = "tcp"
    to_port   = 22
    cidr_blocks = [var.my_cidr]
  }
  egress {
    from_port = 0
    protocol  = "-1"
    to_port   = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

}

resource "aws_security_group" "http_private-ssh_8080" {
  name = "launch-wizard-1"
  vpc_id = var.vpc_id
  description = "launch-wizard-1 created 2021-11-26T13:49:18.572+03:00"
  ingress {
    from_port = 22
    protocol  = "tcp"
    to_port   = 22
    cidr_blocks = ["${var.bastion_ip}/32"]
  }
  ingress {
    from_port = 80
    protocol  = "tcp"
    to_port   = 80
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 8080
    protocol  = "tcp"
    to_port   = 8080
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    protocol  = "-1"
    to_port   = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
